--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body{
+.home{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -8,24 +8,27 @@ body{
     background-size: cover ;
     background-position:center;
 }
-.registration {
+.autorization {
   position: relative;
-  width: 200px;
-  height: 200px;
+  width: 300px;
+  height: 300px;
   background: transparent;
   border: 2px solid rgba(255, 255, 255, 0.3);
-  border-radius: 20px;
+  border-radius: 10px;
   backdrop-filter: blur(50px);
   box-shadow: 0 0 30px rgba(0,0,0, .5);
-  display: flex;
+  display:grid;
   justify-content: center;
   align-items: center;
+}
+.name{
+  margin-top: 10px;
 }
 .sign{
     width: 100%;
     height: 20px;
     margin-top: 5px;
-    background-color: #e4eaef;
+    background-color: #031625;
     border: none;
     outline: none;
     border-radius: 3px;
@@ -33,4 +36,99 @@ body{
     font-size: 1em;
     color: #fff;
     font-weight: 500;
+}
+.dis{
+  margin-top: 5px;
+}
+.enter {
+  margin:0;
+  padding:0;
+  text-align: center;
+  margin-top: 30px;
+}
+.registration {
+  width: 100%;
+  height: 20px;
+ margin-bottom: 30px;
+  background-color: #031625;
+  border: none;
+  outline: none;
+  border-radius: 3px;
+  cursor: pointer;
+  font-size: 1em;
+  color: #09eac5;
+  font-weight: 500;
+}
+*{
+  margin: 0;
+  padding: 0;
+}
+.art {
+  display: flex;
+position: fixed;
+top:0px;
+left: 0px;
+width: 100%;
+display: flex;
+justify-content: space-between;
+align-items: center;
+}
+
+.world_art{
+  display: flex;
+  color:rgb(12, 0, 0);
+  gap: 10px;  
+  justify-content: center;
+}
+.navigation a{
+  position: relative;
+  font-size: 1.1em;
+  color:rgb(5, 0, 0);
+  text-decoration: none;
+  margin-left: 40px;
+}
+.logout{
+  width: 80px;
+  height: 20px;
+  background-color: #031625;
+    border: none;
+    outline: none;
+    border-radius: 3px;
+    cursor: pointer;
+    font-size: 1em;
+    color: #fff;
+    font-weight: 500;
+}
+.sandro{
+  display:flex;
+  margin-top: 50px;
+  text-align: center;
+  justify-content: center;
+}
+.blog{
+  display: flex;
+  gap: 20px;
+
+}
+.image{
+  width: 400px;
+  height: 400px;
+}
+.horizontal {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  justify-content: center;
+}
+h1{
+  margin-top: 20px;
+  margin-bottom: 20px;
+  text-decoration:underline;
+}
+.text{
+  justify-content: center;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  text-decoration:underline;
 }
